Revision history for Perl extension Test::MockObject.

{{$NEXT}}

1.20120301 2012-03-01 13:17:20 America/Los_Angeles
    - updated dependencies to latest versions of UNIVERSAL::isa and UNIVERSAL::can

1.20110612 2011-06-11 23:53:50 America/Los_Angeles
    - removed Module::Build detritus
    - improved Test::Warn testing dependency
    - Added -debug flag to load UNIVERSAL::isa and UNIVERSAL::can on demand,
      rather than in all situations.

1.20110606
    Sun Jun 04 2011
    - converted to Dist::Zilla
    - posted to GitHub

1.09
    Tue May 27 06:11:24 UTC 2008
    - removed a buggy workaround for C<no warnings 'redefine';>, now that 5.6.2
      is the baseline

1.08
    Fri Jun 29 01:36:24 UTC 2007 (chromatic)
    - removed noisy diag() calls from successful tests (RT #19444, Adam Kennedy)
    - removed some magic from the @ISA assignment to work with 5.9.5 (Andreas Koenig)

1.07
    Thu Oct  5 05:46:04 UTC 2006 (chromatic)
    - clarified class mocking documentation (reported by Praveen Ray)

    - T::MO::E should die when called with an unhandleable method (Paul the
      Nomad)

    Sat Sep 30 04:18:23 UTC 2006 (chromatic)
    - fixed incorrect version request for Scalar::Util (alexchorny, RT #21773)

    Sat Sep  9 21:19:35 UTC 2006 (chromatic)
    - fixed a logging documentation error (Nicholas Clark)
    - made fake_module() croak when mocking a loaded module but not mocking
      subs (RT #21049, reported by Mutant)
    - tested check_class_loaded() more carefully (fixes RT #19448, reported by
      Adam Kennedy)

1.06
    Fri Apr 21 01:03:27 UTC 2006 (chromatic)
    - added __get_parents() to list wrapped object's parents in T::M::O::E

1.05
    Sun Apr  9 05:58:52 UTC 2006 (chromatic)
    - fixed anonymous subroutine name interaction with the debugger

1.04
    Sat Mar 18 21:52:52 UTC 2006 (chromatic)
    - made all T::MO::E mocking methods return the invocant (bugfix)
    - moved developer tests under t/developer/ to avoid running by default

1.03