@@ -1,6 +1,7 @@
 Revision history for Perl extension Test::MockObject.
 
 {{$NEXT}}
+    - support added for fields-based objects (Gavin Mogan, RT #84535)
 
 1.20120301 2012-03-01 13:17:20 America/Los_Angeles
     - updated dependencies to latest versions of UNIVERSAL::isa and UNIVERSAL::can
